data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_864.wast
;; 5. **Operand Stack Height Mismatch in Backward Branching**:    - Introduce loops where backward branches occur, but the operand stack height is mismatched when the branch is taken. The CFG should reflect improper stack unwinding and rewinding, leading to inconsistencies.

(assert_invalid
  (module
    (func $stack-mismatch-loop 
      (result i32)
      (local i32)
      (local.set 0 (i32.const 10))
      (loop (result i32)
        (br 0)
        (i32.add)
      )
    )
  )
  "type mismatch"
)